        * added support for windows 64bit amd64 (Jean-Daniel Aussel)
        * support python "new" classes (derive classes from object) (Ludovic Rousseau from chrysn feature request ID 3110077)
        * fixed Reader.__eq__() (Ludovic Rousseau from Bernard Paulus bug ID 3418113)
        * fixed extended APDU transmit buffer too short by 2 (Jean-Daniel Aussel from bugs ID 2914636 and 3106761)


1.6.12 (August 2010)
===================
        * comply with PEP 8 (Ludovic Rousseau)
        * comply with PEP 352 (Jean-Daniel Aussel)
        * support of pcsclite 1.6 and deprecated LPSCARD_READERSTATE_A (Ludovic Rousseau)
        * support of py2exe scripts for wxWindows examples (Jean-Daniel Aussel)
        * partial support of remote pcsc readers with pyro (Jean-Daniel Aussel)


1.6.10 (May 2010)
===================
        * connect() has a new disposition parameter that is passed to SCardDisconnect (Ludovic Rousseau)
        * fixed winscard_init() bad initialization causing problems in multithreaded environment (Ludovic Rousseau)
        * Use MAX_BUFFER_SIZE_EXTENDED (64k) instead of 1024 for SCardControl and SCardTransmit (Ludovic Rousseau, reported by Lukasz Drygiel)
        * call winscard_init() to load the library only in the %init section instead of in each wrapped function (Ludovic Rousseau)
        * for Snow Leopard, do not pass -framework PCSC to the compiler (Martin Paljak)
        * reformatting to meet pep8 (Style Guide for Python Code) guidelines (Ludovic Rousseau)
        * rename FEATURE_MCT_READERDIRECT in FEATURE_MCT_READER_DIRECT to be conform with PCSC v2 part 10 ch. 2.3 (Ludovic Rousseau)
        * added missing CARD_E_NO_READERS_AVAILABLE (Kjell Tore Fossbakk)
        * added support of x86_64 on Mac OS X Snow Leopard (Jakob Schlyter)
        * ATR can be passed in input in the reader state list (Benoit Allard)
        * clear state changed bit in waitforcard/waitforcardevent upon time-out or reader removal (Jean-Daniel Aussel)